# MQTT_Projeto_Vena

./: .env.example  .gitignore  README.md  publisher.py
.github/prompts/: phase1-telemetry-e2e.prompt.md  phase2-auth-identity.prompt.md  phase3-mobile-app.prompt.md  phase4-ble.prompt.md  phase4.5-demo-prep.prompt.md  (+2 more)
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5421ecc75138_add_telemetry_raw.py  7ce464b91137_descrição.py  a1_convert_hypertable.py  a2_create_telemetry_hourly.py  a3_create_telemetry_daily.py  b1_supabase_index.py  b2_pg_cron_cleanup.py  c1_device_meta.py  e734d2061ada_add_refresh_tokens.py
backend/app/: config.py  main.py
backend/app/auth/: deps.py  google.py  jwt.py  routes.py  schemas.py  service.py
backend/app/broker_auth/: routes.py  schemas.py
backend/app/db/: models.py  session.py
backend/app/devices/: pairing.py  routes.py  schemas.py  service.py
backend/app/mqtt/: credentials.py  routes.py  topics.py  worker.py
backend/app/shared/: logging.py
backend/app/telemetry/: aggregation.py  ingest.py  routes.py  schemas.py  service.py
backend/scripts/: provision_nvs.py  seed_device.py  smoke_test.py
backend/tests/: conftest.py  test_phase2.py  test_phase5.py  test_provisioning_e2e.py  test_telemetry_integration.py
docs/: device-setup.md
firmware/: platformio.ini
infra/: Caddyfile  docker-compose.prod.yml  docker-compose.yml
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
scripts/: bootstrap_vm.sh  generate_qr.py
tests/: test_offline_flow.py
(+154 files in other folders)
